# pyacp

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  PR2_CODE_REVIEW_GUIDE.md  README.md  acp_client.py  bug_description.md  claude_smoketest.sh  claude_smoketest_sh.out  codex_smoketest.sh  gemini_smoketest.sh  main.py  merged.py  mini_terminal_w_prints.py  opencode.json  opencode_smoketest.sh  pyproject.toml
codex_home/: auth.json
codex_home/sessions/2025/11/11/: rollout-2025-11-11T11-41-10-019a724a-69ee-7752-82f0-9f4a6fde012c.jsonl
configs/: opencode.json
configs/codex_home/: config.toml
docs/: api_reference.md  quickstart.md
examples/: basic_query.py  claude_smoketest_workflow.py  file_operations.py  interactive.py  streaming_conversation.py  terminal_interaction.py
pyacp/sdk/: client.py
scripts/: README.md  claude_smoketest.sh  codex_smoketest.sh  gemini_smoketest.sh  mini_terminal.py  opencode_smoketest.sh
simple_acp_client/sdk/: client.py
src/pyacp/: __init__.py
src/pyacp/client/: __init__.py  abstract.py  acp_client.py  event_emitter.py  file_system_controller.py  sdk_client.py  terminal_controller.py
src/pyacp/types/: __init__.py  content.py  messages.py  options.py
src/pyacp/utils/: __init__.py  converters.py  terminal.py
tests/: __init__.py
tests/e2e/: MIGRATION.md  README.md  __init__.py  conftest.py  test_agents.py  test_claude_smoketest.py
tests/fixtures/: __init__.py
tests/integration/: __init__.py  test_claude_acp.py  test_codex_acp.py
tests/unit/: __init__.py  test_content.py  test_messages.py  test_options.py  test_terminal.py
