[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyacp"
version = "0.1.0"
description = "Python SDK for Agent Client Protocol with Claude-like interface"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "PyACP Contributors"}
]
keywords = ["acp", "agent-client-protocol", "claude", "sdk", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "agent-client-protocol>=0.6.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "mypy>=1.8.0",
    "ruff>=0.2.0",
]

[tool.hatchling.build.targets.wheel]
packages = ["src/pyacp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
markers = [
    "e2e: end-to-end tests (may be slow)",
    "claude_code_acp: tests requiring Claude Code ACP",
    "codex_acp: tests requiring Codex ACP",
    "opencode: tests requiring OpenCode",
    "gemini: tests requiring Gemini with ACP support",
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []
